[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = '''
__version__.py
'''

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ".venv node_modules .serverless build"
addopts = '''
  --cov fuzzbucket
  --cov fuzzbucket_client
  --cov test_fuzzbucket
  --cov test_fuzzbucket_client
  --cov-report term
  --cov-report html
  --cov-report xml
  -vv
  --mypy
  --disable-warnings
'''

[tool.setuptools_scm]
write_to = "fuzzbucket/__version__.py"
