[metadata]
license_file = LICENSE.md
license = MIT
name = fuzzbucket-client
url = https://github.com/rstudio/fuzzbucket
author = RStudio Connect Engineers
author_email = rsc-dev+fuzzbucket@rstudio.com
description = Command line client for fuzzbucket
long_description = file:README.md

[options]
zip_safe = true
python_requires = >3.5, <4
install_requires = setuptools
packages = fuzzbucket_client

[options.entry_points]
console_scripts =
    fuzzbucket-client = fuzzbucket_client.__main__:main
